index 페이지 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -59,8 +59,54 @@
           </div>
         </div>
         <div class="main-top-right">
-          <div>
-            <div class="article-all-header">전체글</div>
+          <div class="article-all-header">인기글</div>
+          <div class="article-all-main">
+            <ul>
+              <li>
+                <a href="#" class="article-at">
+                  <div class="article-img-area">
+                    <img class="article-all-main-img" src="img/keyboard.png"></img>
+                  </div>
+                  <div class="article-title-area">
+                    <p class="title">로지텍 K120으로 철권 후기</p>
+                    <p class="date">2022-04-12 16:00 | 조회수 100 | 추천 0</p>
+                    <p class="content">판테라 쓰다가 본가에서 철권하느라 키보드로 바꿨는데 이게 동시 입력도 존나 잘 되고 삑살도 안 ..</p>
+                  </div>
+                </a>
+                <a href="#" class="article-at">
+                  <div class="article-img-area">
+                    <img class="article-all-main-img" src="img/keyboard.png"></img>
+                  </div>
+                  <div class="article-title-area">
+                    <p class="title">로지텍 K120으로 철권 후기</p>
+                    <p class="date">2022-04-12 16:00 | 조회수 100 | 추천 0</p>
+                    <p class="content">판테라 쓰다가 본가에서 철권하느라 키보드로 바꿨는데 이게 동시 입력도 존나 잘 되고 삑살도 안 ..</p>
+                  </div>
+                </a>
+                <a href="#" class="article-at">
+                  <div class="article-img-area">
+                    <img class="article-all-main-img" src="img/keyboard.png"></img>
+                  </div>
+                  <div class="article-title-area">
+                    <p class="title">로지텍 K120으로 철권 후기</p>
+                    <p class="date">2022-04-12 16:00 | 조회수 100 | 추천 0</p>
+                    <p class="content">판테라 쓰다가 본가에서 철권하느라 키보드로 바꿨는데 이게 동시 입력도 존나 잘 되고 삑살도 안 ..</p>
+                  </div>
+                </a>
+                <a href="#" class="article-at">
+                  <div class="article-img-area">
+                    <img class="article-all-main-img" src="img/keyboard.png"></img>
+                  </div>
+                  <div class="article-title-area">
+                    <p class="title">로지텍 K120으로 철권 후기</p>
+                    <p class="date">2022-04-12 16:00 | 조회수 100 | 추천 0</p>
+                    <p class="content">판테라 쓰다가 본가에서 철권하느라 키보드로 바꿨는데 이게 동시 입력도 존나 잘 되고 삑살도 안 ..</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
